feat: add static analysis step to Docker patch validation sandbox